<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="vehicle_info_value">%1$s, %2$s\n%3$s\n%4$s</string>
    <string name="speed">Speed</string>
    <string name="rpm">RPM</string>
    <string name="throttle_position">Throttle</string>
    <string name="live_data">Live Data</string>
    <string name="speed_value">&lt;b>Speed&lt;/b>&lt;br/>%s</string>
    <string name="rpm_value">&lt;b>RPM&lt;/b>&lt;br/>%s</string>
    <string name="throttle_value">&lt;b>Throttle Position&lt;/b>&lt;br/>%s</string>
    <string name="mil_value">&lt;b>MIL&lt;/b>   %1$s&lt;br/>&lt;b>Pending DTCs&lt;/b>   %2$s</string>
    <string name="fuel_value">&lt;b>Fuel&lt;/b>&lt;br/>&lt;b>Level&lt;/b>   %1$s&lt;br/>&lt;b>Consumption Rate&lt;/b>   %2$s</string>
    <string name="temperature_value">&lt;b>Temperature&lt;/b>&lt;br/>&lt;b>Air Intake&lt;/b>   %1$s&lt;br/>&lt;b>Ambient&lt;/b>   %2$s</string>
    <string name="report">Report</string>
    <string name="engine_load_value">&lt;b>Engine Load&lt;/b>  %s</string>
    <string name="fuel_pressure_value">&lt;b>Fuel Pressure&lt;/b>   %s</string>
    <string name="fuel_rail_pressure_value">&lt;b>Fuel Rail Pressure&lt;/b>    %s</string>
    <string name="relative_fuel_rail_pressure_value">&lt;b>Relative Fuel Rail Pressure&lt;/b>    %s</string>
    <string name="absolute_fuel_rail_pressure_value">&lt;b>Absolute Fuel Rail Pressure&lt;/b>    %s</string>
    <string name="barometric_pressure_value">&lt;b>Barometric Pressure&lt;/b>    %s</string>
    <string name="intake_manifold_pressure_value">&lt;b>Intake Manifold Pressure&lt;/b>    %s</string>
    <string name="timing_advance_value">&lt;b>Timing Advance&lt;/b>    %s</string>
    <string name="mass_air_flow_value">&lt;b>Mass Air Flow&lt;/b>    %s</string>
    <string name="runtime_since_engine_start_value">&lt;b>Runtime Since Engine Start&lt;/b>    %s</string>
    <string name="runtime_since_dtc_cleared_value">&lt;b>Runtime Since DTC Cleared&lt;/b>    %s</string>
    <string name="runtime_with_mil_on_value">&lt;b>Runtime With MIL On&lt;/b>    %s</string>
    <string name="distance_since_mil_on_value">&lt;b>Distance Since MIL On&lt;/b>    %s</string>
    <string name="distance_since_cc_cleared_value">&lt;b>Distance Since DTC Cleared&lt;/b>    %s</string>
    <string name="wide_band_fuel_ratio_value">&lt;b>Wide Band Air Fuel Ratio&lt;/b>    %s</string>
    <string name="module_voltage_value">&lt;b>Module Voltage&lt;/b>    %s</string>
    <string name="absolute_load_value">&lt;b>Absolute Load&lt;/b>    %s</string>
    <string name="fuel_air_commanded_equivalence_ratio_value">&lt;b>Fuel Air Commanded Equivalence Ratio&lt;/b>   %s</string>
    <string name="oil_temperature_value">&lt;b>Oil Temperature&lt;/b>   %s</string>
    <string name="engine_coolant_temperature_value">&lt;b>Engine Coolant Temperature&lt;/b>   %s</string>
    <string name="relative_throttle_position_value">&lt;b>Relative Throttle Position&lt;/b>   %s</string>
    <string name="absolute_throttle_position_b_value">&lt;b>Absolute Throttle Position B&lt;/b>   %s</string>
    <string name="absolute_throttle_position_c_value">&lt;b>Absolute Throttle Position C&lt;/b>   %s</string>
    <string name="accel_pedal_position_d_value">&lt;b>Accelerometer Pedal Position D&lt;/b>   %s</string>
    <string name="accel_pedal_position_e_value">&lt;b>Accelerometer Pedal Position E&lt;/b>   %s</string>
    <string name="accel_pedal_position_f_value">&lt;b>Accelerometer Pedal Position F&lt;/b>   %s</string>
    <string name="relative_accel_pedal_position_value">&lt;b>Relative Accelerometer Pedal Position&lt;/b>   %s</string>
    <string name="commanded_throttle_actuator_value">&lt;b>Commanded Throttle Actuator&lt;/b>   %s</string>
    <string name="commanded_egr_value">&lt;b>Commanded EGR&lt;/b>   %s</string>
    <string name="commanded_egr_error_value">&lt;b>Commanded EGR Error&lt;/b>   %s</string>
    <string name="commanded_evaporative_purge_value">&lt;b>Commanded Evaporative Purge&lt;/b>   %s</string>
    <string name="fuel_trim_short_term_bank1_value">&lt;b>FuelTrim ShortTerm Bank1&lt;/b>   %s</string>
    <string name="fuel_trim_short_term_bank2_value">&lt;b>FuelTrim ShortTerm Bank2&lt;/b>   %s</string>
    <string name="fuel_trim_long_term_bank1_value">&lt;b>FuelTrim LongTerm Bank1&lt;/b>   %s</string>
    <string name="fuel_trim_long_term_bank2_value">&lt;b>FuelTrim LongTerm Bank2&lt;/b>   %s</string>
    <string name="ethanol_fuel_percent_value">&lt;b>Ethanol Fuel Percentage&lt;/b>   %s</string>
    <string name="fuel_injection_timing_value">&lt;b>Fuel Injection Timing&lt;/b>   %s</string>
    <string name="abs_evap_system_vapor_pressure_value">&lt;b>ABS EVAP System Vapor Pressure&lt;/b>   %s</string>
    <string name="evap_system_vapor_pressure_value">&lt;b>EVAP System Vapor Pressure&lt;/b>   %s</string>
    <string name="warmups_value">&lt;b>WarmUps Since Code Cleared&lt;/b>   %s</string>
    <string name="monitor_status">Monitor Status</string>
    <string name="test">Test</string>
    <string name="available">Available</string>
    <string name="complete">Complete</string>
    <string name="capture_report">Share Report</string>
    <string name="cature_report_error">Failed to share report</string>
    <string name="capturing_report">Capturing Report</string>
    <string name="car_connect_captured_label">Captured By CarConnect</string>
    <string name="donate">Donate</string>
    <string name="donate_label">Want to show some love!</string>
    <string name="later">Later</string>
    <string name="show_us_some_love">Show us some Love!</string>
    <string name="you_are_awesome_nthank_you">You are Awesome!\nThank You</string>
    <string name="amount_of_love">Amount of Love</string>
    <string name="loading">Loading</string>
    <!--Some donation messages use expression unicode characters defined here http://wrttn.me/30dbfd/-->
    <string name="donation_user_canceled_message">We would have liked some love ♥╭╮♥</string>
    <string name="donation_something_went_wrong_message">Something went wrong while processing transaction. Please try again.</string>
    <string name="donation_network_error_message">Please check your network connection.</string>
    <string name="donation_service_disconnected_message">Something went wrong please try again sometime later.</string>
    <string name="donation_feature_not_available_message">Not possible to receive your love ⊙﹏⊙</string>
    <string name="donation_item_unavailable_message">Please try using a different donation amount ⋋_⋌</string>
    <string name="donation_item_not_owned_message">Please try again ਉ_ਉ.</string>
    <string name="donation_item_already_owned_message">You already donated ｡･_･｡</string>
    <string name="donation_error_title">Donation Error</string>

</resources>