<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/report_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/primaryDark"
        android:elevation="5dp"
        android:navigationIcon="@drawable/toolbar_back"
        android:title="@string/report"
        android:titleTextAppearance="@android:style/TextAppearance.Material.WindowTitle"
        android:titleTextColor="@color/primary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary"
            android:padding="16dp">

            <android.support.constraint.Guideline
                android:id="@+id/horizontal_guideline_25"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".25" />

            <android.support.constraint.Guideline
                android:id="@+id/horizontal_guideline_50"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5" />

            <android.support.constraint.Guideline
                android:id="@+id/horizontal_guideline_75"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".75" />

            <android.support.constraint.Guideline
                android:id="@+id/horizontal_guideline_60"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".6" />


            <android.support.v7.widget.CardView
                android:id="@+id/header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/vehicle_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/vehicle_info_value"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    tools:text="Chevy Volt, 1986 /nFJ12444nNIHHH244NNI" />

            </android.support.v7.widget.CardView>


            <TextView
                android:id="@+id/live_data_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/primaryDark"
                android:gravity="center"
                android:text="@string/live_data"
                android:textColor="@color/primary"
                android:textSize="22dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header" />

            <TextView
                android:id="@+id/mil"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="left"
                android:text="@string/mil_value"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/live_data_label" />

            <TextView
                android:id="@+id/speed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:text="@string/speed_value"
                android:textSize="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/horizontal_guideline_25"
                app:layout_constraintTop_toBottomOf="@id/mil" />

            <TextView
                android:id="@+id/rpm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:text="@string/rpm_value"
                android:textSize="18dp"
                app:layout_constraintLeft_toRightOf="@id/horizontal_guideline_25"
                app:layout_constraintRight_toLeftOf="@id/horizontal_guideline_50"
                app:layout_constraintTop_toBottomOf="@id/mil" />

            <TextView
                android:id="@+id/throttle_position"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:text="@string/throttle_value"
                android:textSize="18dp"
                app:layout_constraintLeft_toRightOf="@id/horizontal_guideline_50"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mil" />

            <TextView
                android:id="@+id/fuel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:text="@string/fuel_value"
                android:textSize="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/horizontal_guideline_50"
                app:layout_constraintTop_toBottomOf="@id/speed" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:text="@string/temperature_value"
                android:textSize="18dp"
                app:layout_constraintLeft_toRightOf="@id/horizontal_guideline_50"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/speed" />


            <TextView
                android:id="@+id/report_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/primaryDark"
                android:gravity="center"
                android:text="@string/report"
                android:textColor="@color/primary"
                android:textSize="22dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/horizontal_guideline_50"
                app:layout_constraintTop_toBottomOf="@id/fuel" />

            <ImageView
                android:id="@+id/refresh_report_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_refresh"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fuel" />

            <TextView
                android:id="@+id/engine_load"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:text="@string/engine_load_value"
                android:textSize="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/report_label" />

            <TextView
                android:id="@+id/fuel_pressure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:text="@string/fuel_pressure_value"
                android:textSize="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/engine_load" />

            <TextView
                android:id="@+id/fuel_rail_pressure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:text="@string/fuel_rail_pressure_value"
                android:textSize="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fuel_pressure" />

            <TextView
                android:id="@+id/barometric_pressure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:text="@string/barometric_pressure_value"
                android:textSize="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fuel_rail_pressure" />

            <TextView
                android:id="@+id/intake_manifold_pressure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:text="@string/intake_manifold_pressure_value"
                android:textSize="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barometric_pressure" />


            <TextView
                android:id="@+id/timing_advance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:text="@string/timing_advance_value"
                android:textSize="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/intake_manifold_pressure" />

            <TextView
                android:id="@+id/mass_air_flow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:text="@string/mass_air_flow_value"
                android:textSize="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/timing_advance" />

            <TextView
                android:id="@+id/runtime_since_engine_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:text="@string/runtime_since_engine_start_value"
                android:textSize="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mass_air_flow" />

            <TextView
                android:id="@+id/distance_since_mil_on"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:text="@string/distance_since_mil_on_value"
                android:textSize="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/runtime_since_engine_start" />

            <TextView
                android:id="@+id/distance_since_cc_cleared"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:text="@string/distance_since_cc_cleared_value"
                android:textSize="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/distance_since_mil_on" />

            <TextView
                android:id="@+id/wide_band_air_fuel_ratio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:text="@string/wide_band_fuel_ratio_value"
                android:textSize="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/distance_since_cc_cleared" />

            <TextView
                android:id="@+id/module_voltage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:text="@string/module_voltage_value"
                android:textSize="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/wide_band_air_fuel_ratio" />

            <TextView
                android:id="@+id/absolute_load"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:text="@string/absolute_load_value"
                android:textSize="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/module_voltage" />

            <TextView
                android:id="@+id/fuel_air_commanded_equivalence_ratio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:text="@string/fuel_air_commanded_equivalence_ratio_value"
                android:textSize="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/absolute_load" />

            <TextView
                android:id="@+id/oil_temperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:text="@string/oil_temperature_value"
                android:textSize="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fuel_air_commanded_equivalence_ratio" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>