<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_container"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="@color/primary"
    android:padding="24dp">


    <View
        android:id="@+id/guidelineTop"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/secondary"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/guidelineBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/secondary"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/guidelineLeft"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/secondary"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/guidelineRight"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/secondary"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/guideline1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".5" />

    <View
        android:id="@+id/guideline2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".5" />

    <View
        android:id="@+id/guideline3"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/guideline4"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent" />


    <View
        android:id="@+id/guideline5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".5" />

    <View
        android:id="@+id/guideline6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".5" />

    <View
        android:id="@+id/guideline7"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginRight="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/guideline8"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent" />


    <View
        android:id="@+id/center_heart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_like"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guideline6"
        app:layout_constraintEnd_toEndOf="@id/guideline8"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="@id/guideline7"
        app:layout_constraintTop_toTopOf="@id/guideline5" />

    <TextView
        android:id="@+id/awesome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/you_are_awesome_nthank_you"
        android:textColor="@color/textColorOnPrimary"
        android:textSize="24dp"
        android:textStyle="bold|italic"
        android:visibility="invisible"
        android:layout_marginTop="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".5" />

    <TextView
        android:id="@+id/amountOfLoveText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:gravity="right"
        android:lines="1"
        android:text="@string/amount_of_love"
        android:textColor="@color/textColorOnPrimary"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintEnd_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@id/guideline1" />

    <Spinner
        android:id="@+id/product_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@id/guidelineRight"
        app:layout_constraintTop_toTopOf="@id/guideline1" />


    <TextView
        android:id="@+id/donate_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:text="@string/show_us_some_love"
        android:textColor="@color/textColorOnPrimary"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guidelineTop" />

    <Button
        android:id="@+id/donate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/donate"
        android:textColor="@color/textColorOnSecondary"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottom" />


</android.support.constraint.ConstraintLayout>